language/move-lang/tests/move_check/parser/function_native_with_body.exp
error: 

   ┌── tests/move_check/parser/function_native_with_body.move:3:17 ───
   │
 3 │     native fn() {}
   │                 ^ Unrecognized Token: {
   ·
 3 │     native fn() {}
   │                 - Expected:  ";"
   │

